--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         </div>
         
 
-        <div class="flex">
+        <div class="jone-sisters-inner flex">
             <img src="./image/Crafted+in+Carhartt+29.jpg" alt="">
            
-            <div class="jone-sisters-inner">
+            <div class="story flex">
                 <img src="./image/IN+Kansas+City+Pic-+little+and+shorty.jpg" alt="">
 
 
